[package]
name = "typst-tikz"
description = "The command line interface for Typst, with TikZ support."
categories = ["compilers", "command-line-utilities"]
keywords = ["typst", "cli"]

version = "0.4.0"
rust-version = "1.67"
authors = ["The Typst Project Developers"]
edition = "2021"
homepage = "https://typst.app"
repository = "https://github.com/typst/typst"
license = "Apache-2.0"

[[bin]]
name = "typst-tikz"
path = "src/main.rs"
test = false
doctest = false
bench = false
doc = false

[dependencies]
atty = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.2.4", features = ["derive", "env"] }
codespan-reporting = "0.11"
comemo = "0.3"
dirs = "5"
elsa = "1.8"
inferno = "0.11.15"
lazy_static = "1"
memmap2 = "0.5"
notify = "5"
once_cell = "1"
open = "4.0.2"
regex = "1"
same-file = "1"
siphasher = "0.3"
tempfile = "3.5.0"
tracing = "0.1.37"
tracing-error = "0.2"
tracing-flame = "0.2.0"
tracing-subscriber = "0.3.17"
typst = { git = "https://github.com/typst/typst", rev = "v0.4.0" }
typst-library = { git = "https://github.com/typst/typst", rev = "v0.4.0" }
walkdir = "2"

[build-dependencies]
clap = { version = "4.2.4", features = ["derive", "string"] }
clap_complete = "4.2.1"
clap_mangen = "0.2.10"

[features]
default = ["embed-fonts"]

# Embeds some fonts into the binary:
# - For text: Linux Libertine, New Computer Modern
# - For math: New Computer Modern Math
# - For code: Deja Vu Sans Mono
embed-fonts = []
